test/Harper/Tests/Bad/issue023_conflTypesOfMembers.har
value T a = {
    variant A = {
        foo :: a -> a;
        foo x = x;
    };

    variant B = {
        foo :: a -> Integer;
        foo x = 42;
    };
};